[TP] Remove declarations of Exception that are never thrown and clean-up